[package]
name = "cola_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.66"
quote = "1.0.36"
cola_lib = { path = "../cola_lib" }
proc-macro2 = "1"
darling = "0.20.9"
